<resources>
    <string name="app_name" translatable="false">Naive Reader</string>
    <string name="cd_null" translatable="false">null</string>
    <string name="msg_first_page">It was the first page.</string>
    <string name="msg_last_page">It was the last page.</string>
    <string name="cd_book_cover">Book cover</string>
    <string name="cd_select_icon">Select icon</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="search">Search</string>
    <string name="input_book_title">Input book title</string>
    <plurals name="sources">
        <item quantity="one">%1$d source</item>
        <item quantity="other">%1$d sources</item>
    </plurals>
    <string name="menu_switch_sources">&lt;Switch sources&gt;</string>
    <string name="not_implemented">Not implemented</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search_again">&lt;Search again&gt;</string>
    <string name="read_progress_local">"Progress: %1$.1f%%"</string>
    <string name="read_progress_local_unread">Unread</string>
    <string name="read_progress_net_predownload">Not download</string>
    <string name="read_progress_net_allread">no unread chapters</string>
    <string name="read_progress_net">unread: %1$d</string>
    <string name="tab_add_net_book">Add Book from Net</string>
    <string name="tab_import_txt_flat">Import txt(Flat View)</string>
    <string name="tab_import_txt_tree">Import txt(Tree View)</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="status">Status</string>
    <string name="end">End</string>
    <string name="local_path">Local path</string>
    <string name="source">Source</string>
    <string name="content">Content</string>
    <string name="re_download">Re-download</string>
    <string name="browse_it">Browse it</string>
    <string name="menu_batch_download">Batch download</string>
    <string name="msg_batch_download_finish">Batch download finish</string>
    <string name="download"><![CDATA[<Download>]]></string>
    <string name="clear_garbage">Clear Garbage</string>
    <string name="start">Start</string>
    <string name="server_offline">Server offline</string>
    <string name="server_not_found">Server not found.</string>
    <string name="tab_import_packet">Import packet</string>
    <string name="read_progress_net_end">end</string>
    <string name="not_download">Not download.</string>
    <string name="no_changes">No changes.</string>
    <string name="new_changes">New</string>
    <string name="msg_packet_download">Packet download.</string>
    <string name="browse">Browse</string>
    <string name="HintTextEditing">Editing…</string>
    <string name="archive">Archive</string>
    <string name="input_book_author">Input book author</string>
</resources>
